--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   ],
   "content_scripts": [ 
     {
-      "js":        [ "jquery-3.1.1.min.js", "fidelity.js" ],
+      "js":        [ "jquery-3.1.1.min.js", "fidelity++.js" ],
       "matches":   [ "https://*.fidelity.com/*"],
       "run_at":    "document_end"
     } 
